Fix extra margin at the bottom of the page

--- a/src/css/wysi.css
+++ b/src/css/wysi.css
@@ -4,6 +4,10 @@
   --wysi-highlight: #cce5ff ;
 }
 
+#wysi-svg-icons {
+  display: none;
+}
+
 .wysi-wrapper {
   display: flex;
   flex-direction: column;
